# testrtspserver

./: CMakeLists.txt  README.md  main.c
